concicao para divisao por 0 e inclusao de select no index

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,13 @@
         <label for="numero2">Número 2: </label>
         <input type="text" name="numero2" id="numero2"><br><br>
         <label for="operacao">Operação: </label>
-        <input type="text" name="operacao" id ="operacao"><br><br>
+        <select name="operacao" id="operacao">
+            <option value=""></option>
+            <option value="*">Multiplicar</option>
+            <option value="/">Dividir</option>
+            <option value="+">Somar</option>
+            <option value="-">Subtrair</option>
+        </select><br><br>
         <input type="submit" name="Resultado">
     </form>
 </body>
